@@ -1,4 +1,5 @@
 - do not use aria2 deprecated option (Sam Bailey, mga#7781)
+- do not offer to remove DKMS modules for current kernel (mga#5092
 
 Version 7.9 - 11 October 2012, by Thierry Vignaud
 
